implementing service controller and exceptions